classDiagram
    class Owner {
        +str name
        +int available_minutes
        +time preferred_start
        +List~Pet~ pets
        +add_pet(pet) None
        +list_tasks() List~Task~
    }

    class Pet {
        +str name
        +str species
        +List~Task~ tasks
        +add_task(task) None
        +remove_task(task) None
    }

    class Task {
        +str id
        +str title
        +int duration_minutes
        +Priority priority
        +Recurrence recurrence
        +time preferred_time
        +bool completed
        +mark_complete() None
        +next_occurrence() Task
    }

    class Priority {
        <<enumeration>>
        LOW
        MEDIUM
        HIGH
    }

    class Recurrence {
        <<enumeration>>
        NONE
        DAILY
        WEEKLY
    }

    class Scheduler {
        +build_plan(owner, day) DailyPlan
        +sort_tasks(tasks) List~Task~
        +fits(task, remaining_minutes) bool
    }

    class DailyPlan {
        +date day
        +List~ScheduledItem~ items
        +List~Task~ skipped
        +int total_minutes
        +add_item(item) None
        +explain() str
    }

    class ScheduledItem {
        +Task task
        +time start_time
        +time end_time
    }

    Owner "1" --> "*" Pet : owns
    Pet "1" o--> "*" Task : has
    Task --> "1" Pet : belongs to
    Task --> Priority : uses
    Task --> Recurrence : repeats
    Scheduler ..> Owner : reads constraints
    Scheduler ..> DailyPlan : builds
    DailyPlan "1" --> "*" ScheduledItem : contains
    ScheduledItem --> Task : wraps
